--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ buildscript {
     repositories {
         jcenter()
         maven { url "https://kotlin.bintray.com/kotlinx" }
+        maven { url "https://repo.spring.io/snapshot/" }
         maven {
             url "https://kotlin.bintray.com/kotlin-dev"
             credentials {
@@ -133,6 +134,7 @@ allprojects {
         jcenter()
         maven {
             url "https://kotlin.bintray.com/kotlin-dev"
+            url "https://repo.spring.io/snapshot/"
             credentials {
                 username = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER') ?: ""
                 password = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY') ?: ""
