Disable atomicfu JVM bytecode transformation

--- a/integration/kotlinx-coroutines-guava/build.gradle
+++ b/integration/kotlinx-coroutines-guava/build.gradle
@@ -4,6 +4,8 @@
 
 ext.guava_version = '28.0-jre'
 
+apply from: rootProject.file("gradle/atomicfu.gradle")
+
 dependencies {
     compile "com.google.guava:guava:$guava_version"
 }
