--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
  */
 import org.jetbrains.kotlin.konan.target.HostManager
 
+apply from: rootProject.file("gradle/atomicfu.gradle")
 apply from: rootProject.file("gradle/experimental.gradle")
 
 def rootModule = "kotlinx.coroutines"
