--- a/kotlinx-coroutines-test/build.gradle
+++ b/kotlinx-coroutines-test/build.gradle
@@ -1,3 +1,5 @@
+apply from: rootProject.file("gradle/atomicfu.gradle")
+
 dependencies {
     implementation project(":kotlinx-coroutines-debug")
 }
