--- a/integration/kotlinx-coroutines-play-services/build.gradle
+++ b/integration/kotlinx-coroutines-play-services/build.gradle
@@ -2,6 +2,9 @@
  * Copyright 2016-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license.
  */
 
+
+apply from: rootProject.file("gradle/atomicfu.gradle")
+
 ext.tasks_version = '16.0.1'
 
 def artifactType = Attribute.of("artifactType", String)
