--- a/reactive/kotlinx-coroutines-rx3/build.gradle
+++ b/reactive/kotlinx-coroutines-rx3/build.gradle
@@ -1,6 +1,9 @@
 /*
  * Copyright 2016-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license.
  */
+
+apply from: rootProject.file("gradle/atomicfu.gradle")
+
 targetCompatibility = JavaVersion.VERSION_1_8
 
 dependencies {
