--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@
 import org.jetbrains.kotlin.konan.target.HostManager
 
 apply plugin: 'jdk-convention'
+apply from: rootProject.file("gradle/atomicfu.gradle")
 apply from: rootProject.file("gradle/experimental.gradle")
 
 def rootModule = "kotlinx.coroutines"
