--- a/integration/kotlinx-coroutines-play-services/build.gradle
+++ b/integration/kotlinx-coroutines-play-services/build.gradle
@@ -7,6 +7,8 @@ import java.util.zip.ZipFile
  * Copyright 2016-2018 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license.
  */
 
+apply from: rootProject.file("gradle/atomicfu.gradle")
+
 ext.tasks_version = '16.0.1'
 
 def attr = Attribute.of("artifactType", String.class)
