--- a/reactive/kotlinx-coroutines-reactor/build.gradle
+++ b/reactive/kotlinx-coroutines-reactor/build.gradle
@@ -2,6 +2,8 @@
  * Copyright 2016-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license.
  */
 
+apply from: rootProject.file("gradle/atomicfu.gradle")
+
 dependencies {
     compile "io.projectreactor:reactor-core:$reactor_vesion"
     compile project(':kotlinx-coroutines-reactive')
