--- a/ui/kotlinx-coroutines-android/build.gradle
+++ b/ui/kotlinx-coroutines-android/build.gradle
@@ -2,6 +2,8 @@
  * Copyright 2016-2018 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license.
  */
 
+apply from: rootProject.file("gradle/atomicfu.gradle")
+
 repositories {
     google()
     // TODO Remove once R8 is updated to a 1.6.x version.
